syntax = "proto3";

package webitel.chat.service.viberbot; 

service ViberBotService {
  rpc MessageFromFlow(MessageFromFlowRequest) returns (MessageFromFlowResponse) {}
  rpc AddProfile(AddProfileRequest) returns (AddProfileResponse) {}
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
}

message Error {
    string id = 1;
    string message = 2;
}

message Message {
    int64 id = 1;
    string type = 2;

    message TextMessage {
        string text = 1;
    }

    oneof value {
        TextMessage text_message = 3;
    }
}

message Profile {
  int64 id = 1;
  string name = 2;
  string type = 3;
  int64 domain_id = 4;
  map<string, string>  variables = 5;
}

message MessageFromFlowRequest {
  string session_id = 1;
  int64 profile_id = 2;
  int64 conversation_id = 3;
  Message message = 4;
}

message MessageFromFlowResponse {
  Error error = 1;
}

message AddProfileRequest {
  Profile profile = 1;
}

message AddProfileResponse {
  Error error = 1;
}

message DeleteProfileRequest {
  int64 profile_id = 1;
}

message DeleteProfileResponse {
  Error error = 1;
}